# yolo-from-scratch

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: nn.py  predict.py  utils.py
src/weights/: README.md  weight_converter.py
